Fixed image upload/image names

--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
                 <h3>Party games for big groups</h3>
             </div>
             <div class="gametypereel">
-                <img src="bpbackgrounds/Pink2.jpg" alt="two people">
+                <img src="bpbackgrounds/pink2.jpg" alt="two people">
                 <h3>Two player ghames for cozy nights in</h3>
             </div>
             <div class="gametypereel">
-                <img src="bpbackgrounds/Pink3.jpg" alt="people zooming">
+                <img src="bpbackgrounds/pink3.jpg" alt="people zooming">
                 <h3>'Ready for Zoom' party games</h3>
             </div>
             <div class="gametypereel">
-                <img src="bpbackgrounds/Pink4.jpg" alt="beach">
+                <img src="bpbackgrounds/pink4.jpg" alt="beach">
                 <h3>Travel-size games to play on the go</h3>
             </div>
         </div>
